--- a/animegen.html
+++ b/animegen.html
@@ -15,10 +15,8 @@
         <form method="get" onsubmit="generate(event)">
             <input type="text" required="required" placeholder="Title" id="title"><input class="button" type="button" value=" " /><input class="button" type="button" value=" " />
             <input type="text" required="required" placeholder="Image" id="image"><input class="button" type="button" value=" " /><input class="button" type="button" value=" " />
-			<div id="generator">
-
-			</div>
-			<input type="submit" value="GENERATE"/>
+            <div id="generator"></div>
+            <input type="submit" value="GENERATE"/>
         </form>
     </div>
     <div id="generatorOutput">
