--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
     <link href='http://fonts.googleapis.com/css?family=Play' rel='stylesheet' type='text/css'>
     <link rel="icon" type="image/png" href="css/favicon.png">
-    <script src="js/anime/list.js"></script>
-    <script src="js/anime/functions.js"></script>
-	<script src="js/navbar.js"></script>
     <title>Anime</title>
+    <script src="javascript/database/navbarCollection.js"></script>
+    <script src="javascript/models/anime.js"></script>
+    <script src="javascript/core/seeders.js"></script>
+    <script src="javascript/core/generators.js"></script>
+    <script src="javascript/database/animeCollection.js"></script>
 </head>
 <body>
 <div id="wrapper">
 
 </div>
-<script>
-	navbar();
-    sortAs(1);
-    printList();
 
+<script>
+    module.navbarGenerator();
+    module.printAnime(true);
 </script>
 </body>
 </html>
